--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Raymond Lim - Engineering Portfolio</title>
 
-  <!-- Font Awesome for social & toggle icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <!-- ✅ Font Awesome with brand & solid icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    integrity="sha512-TQz+kg3vU/7c1g3cM6pN6PiLTQt5eVxdMN6uRINqZLw0lo5kjZuXz/dZtJZINxR/hY7En3GqNzEoKHZ/4t8RcA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 
   <style>
     :root {
@@ -41,8 +47,8 @@
 
     header {
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: space-between;
       padding: 20px 40px;
       background-color: var(--header-bg);
       white-space: nowrap;
@@ -59,7 +65,6 @@
       gap: 30px;
       margin-left: auto;
       margin-right: 20px;
-      flex-shrink: 1;
     }
 
     nav a {
@@ -106,7 +111,7 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('profilepicture.jpg'); /* Replace with your image */
+      background-image: url('your-photo.jpg'); /* replace with actual filename */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
@@ -239,19 +244,19 @@
       <p>I’m an engineer passionate about problem-solving, design, and precision. Explore this portfolio to see my work and journey.</p>
 
       <div class="social-container">
-        <a href="https://instagram.com/raymond_oscar" target="_blank" class="social-box">
+        <a href="https://instagram.com/yourusername" target="_blank" class="social-box">
           <i class="fab fa-instagram"></i>
           <span>Instagram</span>
         </a>
-        <a href="https://instagram.com/kreatif3d.id" target="_blank" class="social-box">
+        <a href="https://instagram.com/kreatif3d" target="_blank" class="social-box">
           <i class="fab fa-instagram"></i>
           <span>Kreatif 3D</span>
         </a>
-        <a href="https://linkedin.com/in/im-raymond-lim" target="_blank" class="social-box">
+        <a href="https://linkedin.com/in/yourusername" target="_blank" class="social-box">
           <i class="fab fa-linkedin"></i>
           <span>LinkedIn</span>
         </a>
-        <a href="https://youtube.com/@raymondoscarlim" target="_blank" class="social-box">
+        <a href="https://youtube.com/@yourchannel" target="_blank" class="social-box">
           <i class="fab fa-youtube"></i>
           <span>YouTube</span>
         </a>
