--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('your-photo.jpg'); /* replace with actual filename */
+      background-image: url('profilepicture.jpg'); /* replace with actual filename */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
@@ -228,10 +228,7 @@
   <header>
     <div class="logo">Raymond Lim</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
     </nav>
     <button class="dark-toggle" onclick="toggleDarkMode()" aria-label="Toggle dark mode">
       <i id="toggle-icon" class="fas fa-moon"></i>
@@ -244,19 +241,19 @@
       <p>I’m an engineer passionate about problem-solving, design, and precision. Explore this portfolio to see my work and journey.</p>
 
       <div class="social-container">
-        <a href="https://instagram.com/yourusername" target="_blank" class="social-box">
+        <a href="https://instagram.com/raymond_oscar" target="_blank" class="social-box">
           <i class="fab fa-instagram"></i>
           <span>Instagram</span>
         </a>
-        <a href="https://instagram.com/kreatif3d" target="_blank" class="social-box">
+        <a href="https://instagram.com/kreatif3d.id" target="_blank" class="social-box">
           <i class="fab fa-instagram"></i>
           <span>Kreatif 3D</span>
         </a>
-        <a href="https://linkedin.com/in/yourusername" target="_blank" class="social-box">
+        <a href="https://linkedin.com/in/im-raymond-lim" target="_blank" class="social-box">
           <i class="fab fa-linkedin"></i>
           <span>LinkedIn</span>
         </a>
-        <a href="https://youtube.com/@yourchannel" target="_blank" class="social-box">
+        <a href="https://youtube.com/@raymondoscarlim" target="_blank" class="social-box">
           <i class="fab fa-youtube"></i>
           <span>YouTube</span>
         </a>
