--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Raymond Lim - Engineering Portfolio</title>
 
-  <!-- ✅ Font Awesome with brand & solid icons -->
+  <!-- Font Awesome CDN -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -16,19 +16,11 @@
 
   <style>
     :root {
-      --bg-color: #ffffff;
-      --text-color: #000000;
-      --header-bg: #f5f5f5;
-      --social-bg: #efefef;
-      --social-hover: #ddd;
-    }
-
-    body.dark-mode {
-      --bg-color: #1e1e1e;
-      --text-color: #f5f5f5;
-      --header-bg: #111111;
-      --social-bg: #2a2a2a;
-      --social-hover: #444444;
+      --bg-color: #0a192f;
+      --text-color: #f0f0f0;
+      --header-bg: #112240;
+      --social-bg: #1c2b4a;
+      --social-hover: #233554;
     }
 
     * {
@@ -43,6 +35,9 @@
       font-weight: bold;
       background-color: var(--bg-color);
       color: var(--text-color);
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
 
     header {
@@ -73,14 +68,6 @@
       font-size: 18px;
     }
 
-    .dark-toggle {
-      background: none;
-      border: none;
-      cursor: pointer;
-      font-size: 20px;
-      color: var(--text-color);
-    }
-
     .main {
       display: flex;
       flex-direction: row;
@@ -89,6 +76,7 @@
       gap: 40px;
       padding: 60px 20px;
       flex-wrap: nowrap;
+      flex: 1;
     }
 
     .intro {
@@ -111,7 +99,7 @@
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('profilepicture.jpg'); /* replace with actual filename */
+      background-image: url('profilepicture.jpg'); /* Replace with your image */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
@@ -149,6 +137,14 @@
 
     .social-box span {
       display: block;
+      font-size: 14px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #112240;
+      color: #f0f0f0;
       font-size: 14px;
     }
 
@@ -230,9 +226,6 @@
     <nav>
       <a href="index.html">Home</a>
     </nav>
-    <button class="dark-toggle" onclick="toggleDarkMode()" aria-label="Toggle dark mode">
-      <i id="toggle-icon" class="fas fa-moon"></i>
-    </button>
   </header>
 
   <main class="main">
@@ -263,19 +256,9 @@
     <div class="avatar"></div>
   </main>
 
-  <script>
-    function toggleDarkMode() {
-      document.body.classList.toggle('dark-mode');
-      const icon = document.getElementById('toggle-icon');
-      if (document.body.classList.contains('dark-mode')) {
-        icon.classList.remove('fa-moon');
-        icon.classList.add('fa-sun');
-      } else {
-        icon.classList.remove('fa-sun');
-        icon.classList.add('fa-moon');
-      }
-    }
-  </script>
+  <footer>
+    © Raymond Lim. All Rights Reserved.
+  </footer>
 
 </body>
 </html>
