--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </a>
         <a href="https://instagram.com/kreatif3d.id" target="_blank" class="social-box">
           <i class="fab fa-instagram"></i>
-          <span>Kreatif 3D</span>
+          <span>Kreatif 3D Instagram</span>
         </a>
         <a href="https://linkedin.com/in/im-raymond-lim" target="_blank" class="social-box">
           <i class="fab fa-linkedin"></i>
