--- a/index.html
+++ b/index.html
@@ -204,17 +204,14 @@
   <header>
     <div class="logo">Raymond Lim</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
     </nav>
   </header>
 
   <main class="main">
     <div class="intro">
       <h1>Hi! My name is Raymond.</h1>
-      <p>I’m an engineer passionate about problem-solving, design, and precision. Explore this portfolio to see my work and journey.</p>
+      <p>I love digging into how 3D printing and new tech can change the way we design and build things. When I'm not working on projects or learning something new, you'll probably find me at the piano, just playing for fun.</p>
 
       <div class="social-container">
         <a href="https://instagram.com/raymond_oscar" target="_blank" class="social-box">
@@ -230,7 +227,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#f0f0f0" viewBox="0 0 24 24">
             <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.3.1 2.1.3 2.6.6.5.3.9.7 1.2 1.2.3.5.5 1.3.6 2.6.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.3-.3 2.1-.6 2.6-.3.5-.7.9-1.2 1.2-.5.3-1.3.5-2.6.6-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.3-.1-2.1-.3-2.6-.6-.5-.3-.9-.7-1.2-1.2-.3-.5-.5-1.3-.6-2.6C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.3.3-2.1.6-2.6.3-.5.7-.9 1.2-1.2.5-.3 1.3-.5 2.6-.6C8.4 2.2 8.8 2.2 12 2.2zM12 5.5A6.5 6.5 0 1 0 12 18.5 6.5 6.5 0 0 0 12 5.5zm0 10.7a4.2 4.2 0 1 1 0-8.4 4.2 4.2 0 0 1 0 8.4zm4.8-10.8a1.5 1.5 0 1 0 0 3.0 1.5 1.5 0 0 0 0-3.0z"/>
           </svg>
-          <span>Kreatif 3D</span>
+          <span>Kreatif 3D Instagram</span>
         </a>
 
         <a href="https://linkedin.com/in/im-raymond-lim" target="_blank" class="social-box">
