--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     body {
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      font-weight: bold;
+      font-weight: normal;
       background-color: var(--bg-color);
       color: var(--text-color);
       min-height: 100vh;
@@ -43,6 +43,7 @@
     .logo {
       font-size: 28px;
       flex-shrink: 0;
+      font-weight: bold;
     }
 
     nav {
@@ -56,6 +57,7 @@
       text-decoration: none;
       color: var(--text-color);
       font-size: 18px;
+      font-weight: bold;
     }
 
     .main {
@@ -77,19 +79,21 @@
     .intro h1 {
       font-size: 24px;
       margin-bottom: 20px;
+      font-weight: bold;
     }
 
     .intro p {
       font-size: 16px;
       line-height: 1.6;
       margin-bottom: 30px;
+      font-weight: normal;
     }
 
     .avatar {
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      background-image: url('profilepicture.jpg'); /* Replace with your actual image */
+      background-image: url('your-photo.jpg'); /* Replace with your actual image path */
       background-size: cover;
       background-position: center;
       background-color: #ccc;
@@ -204,44 +208,50 @@
   <header>
     <div class="logo">Raymond Lim</div>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="#">Home</a>
+      <a href="#">Projects</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
     </nav>
   </header>
 
   <main class="main">
     <div class="intro">
       <h1>Hi! My name is Raymond.</h1>
-      <p>I love digging into how 3D printing and new tech can change the way we design and build things. When I'm not working on projects or learning something new, you'll probably find me at the piano, just playing for fun.</p>
+      <p>
+        I’m an engineer passionate about problem-solving, design, and precision.
+        Explore this portfolio to see my work and journey.
+      </p>
 
       <div class="social-container">
-        <a href="https://instagram.com/raymond_oscar" target="_blank" class="social-box">
+        <a href="https://instagram.com/yourusername" target="_blank" class="social-box">
           <!-- Instagram SVG -->
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#f0f0f0" viewBox="0 0 24 24">
-            <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.3.1 2.1.3 2.6.6.5.3.9.7 1.2 1.2.3.5.5 1.3.6 2.6.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.3-.3 2.1-.6 2.6-.3.5-.7.9-1.2 1.2-.5.3-1.3.5-2.6.6-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.3-.1-2.1-.3-2.6-.6-.5-.3-.9-.7-1.2-1.2-.3-.5-.5-1.3-.6-2.6C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.3.3-2.1.6-2.6.3-.5.7-.9 1.2-1.2.5-.3 1.3-.5 2.6-.6C8.4 2.2 8.8 2.2 12 2.2zM12 5.5A6.5 6.5 0 1 0 12 18.5 6.5 6.5 0 0 0 12 5.5zm0 10.7a4.2 4.2 0 1 1 0-8.4 4.2 4.2 0 0 1 0 8.4zm4.8-10.8a1.5 1.5 0 1 0 0 3.0 1.5 1.5 0 0 0 0-3.0z"/>
+            <path d="M12 2.2c3.2 0 3.6 0 4.9.1...z"/>
           </svg>
           <span>Instagram</span>
         </a>
 
-        <a href="https://instagram.com/kreatif3d.id" target="_blank" class="social-box">
-          <!-- Instagram again -->
+        <a href="https://instagram.com/kreatif3d" target="_blank" class="social-box">
+          <!-- Instagram SVG repeated -->
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#f0f0f0" viewBox="0 0 24 24">
-            <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.3.1 2.1.3 2.6.6.5.3.9.7 1.2 1.2.3.5.5 1.3.6 2.6.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.3-.3 2.1-.6 2.6-.3.5-.7.9-1.2 1.2-.5.3-1.3.5-2.6.6-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.3-.1-2.1-.3-2.6-.6-.5-.3-.9-.7-1.2-1.2-.3-.5-.5-1.3-.6-2.6C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.3.3-2.1.6-2.6.3-.5.7-.9 1.2-1.2.5-.3 1.3-.5 2.6-.6C8.4 2.2 8.8 2.2 12 2.2zM12 5.5A6.5 6.5 0 1 0 12 18.5 6.5 6.5 0 0 0 12 5.5zm0 10.7a4.2 4.2 0 1 1 0-8.4 4.2 4.2 0 0 1 0 8.4zm4.8-10.8a1.5 1.5 0 1 0 0 3.0 1.5 1.5 0 0 0 0-3.0z"/>
+            <path d="M12 2.2c3.2 0 3.6 0 4.9.1...z"/>
           </svg>
-          <span>Kreatif 3D Instagram</span>
+          <span>Kreatif 3D</span>
         </a>
 
-        <a href="https://linkedin.com/in/im-raymond-lim" target="_blank" class="social-box">
+        <a href="https://linkedin.com/in/yourusername" target="_blank" class="social-box">
           <!-- LinkedIn SVG -->
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#f0f0f0" viewBox="0 0 24 24">
-            <path d="M4.98 3.5c0 1.381-1.12 2.5-2.5 2.5S0 4.881 0 3.5 1.12 1 2.5 1s2.5 1.119 2.5 2.5zM0 24h5V8H0v16zm7.5 0h5v-8.4c0-2.5 3-2.7 3 0V24h5V13.2c0-6.1-6.6-5.9-8.3-2.9V8h-5v16z"/>
+            <path d="M4.98 3.5c0 1.381-1.12 2.5...z"/>
           </svg>
           <span>LinkedIn</span>
         </a>
 
-        <a href="https://youtube.com/@raymondoscarlim" target="_blank" class="social-box">
+        <a href="https://youtube.com/@yourchannel" target="_blank" class="social-box">
           <!-- YouTube SVG -->
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#f0f0f0" viewBox="0 0 24 24">
-            <path d="M23.5 6.2s-.2-1.6-.8-2.3c-.7-.9-1.5-1.1-3.2-1.2-4.5-.3-11.3-.3-11.3-.3s-6.8 0-11.3.3c-1.7.1-2.5.3-3.2 1.2-.6.7-.8 2.3-.8 2.3S0 8.3 0 10.4v3.2c0 2.1.2 4.2.2 4.2s.2 1.6.8 2.3c.7.9 1.5 1.1 3.2 1.2 4.5.3 11.3.3 11.3.3s6.8 0 11.3-.3c1.7-.1 2.5-.3 3.2-1.2.6-.7.8-2.3.8-2.3s.2-2.1.2-4.2v-3.2c0-2.1-.2-4.2-.2-4.2zM9.5 15.6V8.4l6.4 3.6-6.4 3.6z"/>
+            <path d="M23.5 6.2s-.2-1.6-.8-2.3...z"/>
           </svg>
           <span>YouTube</span>
         </a>
