--- a/index.html
+++ b/index.html
@@ -208,10 +208,7 @@
   <header>
     <div class="logo">Raymond Lim</div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
     </nav>
   </header>
 
@@ -219,8 +216,8 @@
     <div class="intro">
       <h1>Hi! My name is Raymond.</h1>
       <p>
-        I’m an engineer passionate about problem-solving, design, and precision.
-        Explore this portfolio to see my work and journey.
+        I love digging into how 3D printing and new tech can change the way we design and build things. 
+        When I'm not working on projects or learning something new, you'll probably find me at the piano, just playing for fun.
       </p>
 
       <div class="social-container">
